# ratel-cli

./: Cargo.toml  README.md  install.sh  ratel.pest
.github/workflows/: release.yml
src/: main.rs
