[package]
name = "ratel-cli"
version = "0.5.4"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
pest = "2.8.4"
pest_derive = "2.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
walkdir = "2.5.0"
cdd_core = { git = "https://github.com/cdd-framework/cdd-core", version = "0.5.2" }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "native-tls"] }
# dev mode - use relative path
# cdd_core = { path = "../cdd-core" }